# mlgidlab

./: CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: backend_compatibility.md  getting_started.md  manual_test_plan.html
example/: laB6_2025_09_05.poni  sample.yaml
example/cifs/: 1_BA2PbI4_n1.cif  5_BA2MAPb2I7_n2.cif  Bn-Br_test.cif  In2O3_14387.cif  InOOH_15082.cif  MAPbBr3_1446529.cif  MAPbBr3_1446530.cif  MAPbBr3_1533441.cif  SnO2_39173.cif  SnO_16481.cif
mlgidbase_gui/: __init__.py  __main__.py  conversion.py  conversion_panel.py  file_model.py  fit.py  image_viewer.py  main_window.py  parameter_panel.py  pipeline.py  pipeline_panel.py  polar.py  profile_viewer.py  session.py  theme.py  workers.py
mlgidlab/: __init__.py  __main__.py  calibration_dialog.py  conversion.py  conversion_panel.py  figure_export_window.py  file_model.py  fit.py  frame_range.py  image_viewer.py  main_window.py  manual_fit.py  parameter_panel.py  peak_clipboard.py  peaks_table_panel.py  pipeline.py  pipeline_panel.py  polar.py  profile_viewer.py  session.py  theme.py  workers.py
tests/: conftest.py  test_2d_preview_override.py  test_add_to_detected.py  test_aspect_ratio.py  test_async_entry_switch.py  test_async_open.py  test_batch_fit_2d.py  test_browser_entry_select.py  test_bulk_delete.py  test_contrast_persists.py  test_conversion_overrides.py  test_delete_peak_row.py  test_energy_guard.py  test_figure_export_svg.py  test_file_browser_delete.py  test_file_tree_refresh.py  test_fit_gaussian.py  test_fit_mode_selector.py  test_frame_range_parser.py  test_hermetic_guard.py  test_lazy_normalize.py  test_lazy_peaks.py  test_lazy_raw_loading.py  test_manual_fit.py  test_manual_peak_box_ops.py  test_matched_invalidation_on_refit.py  test_matched_remap_on_fitted_delete.py  test_multi_select.py  test_paste_to_range.py  test_peak_clipboard.py  test_peak_roundtrip.py  test_pipeline_entry_preflight.py  test_pipeline_progress.py  test_pipeline_queue_snapshot.py  test_polar_to_qxyz.py  test_pygid_incompat_guard.py  test_raw_async_gui.py  test_raw_session.py  test_reset_analysis.py  test_score_cutoff.py  (+11 more)
tools/: memprofile.py
