[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlgidlab"
version = "0.0.1"
description = "mlgidLAB: graphical interface for the mlgidBASE GIWAXS analysis pipeline"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    # silx[full] pulls in matplotlib, dateutil, qtawesome, PyOpenGL — all
    # required by DataViewerFrame's auto-rendering.
    "silx[full]>=2.1",
    "h5py>=3.10",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyqtgraph>=0.13",
    "qdarkstyle>=3.2",
    # In-GUI PONI calibration + mask creation: the Conversion dock's
    # "Create…" buttons embed pyFAI's calibration widget set (the same
    # workflow as the standalone pyFAI-calib2 CLI). Imported lazily
    # inside the button handlers so a broken pyFAI install doesn't
    # block cold startup.
    "pyFAI>=2024.1",
]

[project.optional-dependencies]
# pytest-qt drives the GUI smoke harness; tests run headless via
# QT_QPA_PLATFORM=offscreen set in tests/conftest.py (no xvfb needed).
dev = ["pytest>=8.0", "pytest-qt>=4.4"]
# Pipeline backend (heavy: pulls torch + the mlgid analysis stack).
# Install when you actually want to run detection/fitting/matching from the GUI.
# pygid is required for the raw → NeXus conversion path; it's transitively
# pulled by mlgidbase but listing it explicitly makes the dependency
# obvious to anyone reading the project metadata.
pipeline = [
    "mlgidbase>=0.1",
    "pygid>=0.2",
    "PyYAML",
]

[project.gui-scripts]
mlgidlab = "mlgidlab:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Quiet, fail-fast-ish defaults for the smoke harness.
addopts = "-q -ra"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlgidlab*"]
