[build-system]
# setuptools >= 77 for PEP 639 license metadata (the SPDX `license`
# string + `license-files`).
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlgidlab"
version = "0.1.0a1"
description = "mlgidLAB: graphical interface for the mlgidBASE GIWAXS analysis pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Nico Lerch", email = "nicolerch23@gmail.com" },
]
keywords = ["GIWAXS", "GISAXS", "diffraction", "NeXus", "HDF5", "PySide6", "silx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "PySide6>=6.6",
    # silx[full] pulls in matplotlib, dateutil, qtawesome, PyOpenGL — all
    # required by DataViewerFrame's auto-rendering.
    "silx[full]>=2.1",
    "h5py>=3.10",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyqtgraph>=0.13",
    "qdarkstyle>=3.2",
    # In-GUI PONI calibration + mask creation: the Conversion dock's
    # "Create…" buttons embed pyFAI's calibration widget set (the same
    # workflow as the standalone pyFAI-calib2 CLI). Imported lazily
    # inside the button handlers so a broken pyFAI install doesn't
    # block cold startup.
    "pyFAI>=2024.1",
]

[project.optional-dependencies]
# pytest-qt drives the GUI smoke harness; tests run headless via
# QT_QPA_PLATFORM=offscreen set in tests/conftest.py (no xvfb needed).
dev = ["pytest>=8.0", "pytest-qt>=4.4"]
# Pipeline backend (heavy: pulls torch + the mlgid analysis stack).
# Install when you actually want to run detection/fitting/matching from
# the GUI. The GUI imports mlgidbase, pygid, pygidfit, mlgidmatch and
# pygidsim *directly*, so all five are declared here rather than relying
# on mlgidbase's transitive closure — a future mlgidbase that drops one
# then surfaces as a clear resolver error, not a runtime ImportError.
# mlgiddetect is omitted on purpose: the GUI never imports it; it arrives
# transitively via mlgidbase (which run_detection needs).
# Exact ('==') pins, not floors: each in-house backend release can shift
# the detection/fitting/matching numerics or the on-disk schema, so a
# bump must be a deliberate, test-rechecked change rather than something
# pip silently picks up. The versions below are the verified-good set
# (all 167 tests pass against them — see Documentation/backend_compatibility.md).
# To move up: bump here, re-run the full suite + the end-to-end demo
# loop, then commit the new pins.
pipeline = [
    "mlgidbase==0.1.3",
    "pygid==0.2.10",
    "pygidfit==0.1.3",
    "mlgidmatch==0.1.3",
    "pygidsim==0.1.4",
    "PyYAML",
]

[project.gui-scripts]
mlgidlab = "mlgidlab:main"

[project.urls]
Homepage = "https://github.com/mlgid-project/mlgidLAB"
Repository = "https://github.com/mlgid-project/mlgidLAB"
Issues = "https://github.com/mlgid-project/mlgidLAB/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Quiet, fail-fast-ish defaults for the smoke harness.
addopts = "-q -ra"
markers = [
    "gui: constructs a MainWindow/QWidget — needs the offscreen QApplication",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlgidlab*"]
